Fix z-index

--- a/public/less/application.less
+++ b/public/less/application.less
@@ -122,6 +122,8 @@ div.note-editor {
   width: 50%;
   height: 100%;
   border: 0;
+  display: none;
+  z-index: 1000;
   // opacity: 0.5;
   background-color: rgba(255,255,255,0.9);
   // font-family: 'Helvetica Neue', Helvetica, 'Apple SD Gothic Neo', 'Nanum Gothic', 'Malgun Gothic', Arial, sans-serif;
